tests/files/parser_tests/should_fail/108.cmdr
//Should not parse else if statement following if-else
if (true) {
	x = 3;
} else {
	x = 4;
} else if (true) {
	x = 5;
}